This file documents the revision history for the Monitoring Webinterface Thruk.

next:
          - Panorama View:
            - fix display error in speedometer with overlaping thresholds
          - Business Process:
            - fix regular expression in service state nodes

2.10-2   Mon Oct  3 20:43:02 CEST 2016
          - mark disabled eventhandler red on process info page
          - add lmd support
          - get uid/groups with POSIX:getgroups if possible (mickenordin #634)
          - fix xss issue on login page
          - Panorama View:
            - increase popups delay to 1second
            - fix popups showing when mouse moved over a icon
            - fix start page not found when using OMD
          - Mobile:
            - fix sending reschedule command

2.10     Wed Aug 24 14:59:03 CEST 2016
          - add useragentcompat option for IE compatibility mode (ofosos #626)
          - support reading action_menu_items from file/folder
          - support thruk_local.d/file.$hostname files to separate host specific configs
          - fix can_submit_commands setting not used from contact (#597)
          - fix corrupting datafiles when trying to write to full filesystems
          - support curl/wget scripts when cookie auth is enabled
          - Logcache:
            - add logcache_import_exclude option
            - remove orphaned plugin output references on logcacheclean
          - Reports:
            - include any ok event always in availability calculation
          - Panorama View:
            - make popup completely customizable
            - add dashboard status icon type
            - add performance bar icon type
            - add trend / forecast icon type
            - icon label can be mouseover only now
            - background color of dashboards can be changed now
            - do not overlap icons which are placed close together
            - host status beats service status for group/filter icons